--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,11 @@
         background: palegoldenrod;
     }
 
-    h1 {
-      font-style: italic;
-        font-size: 200px;
-        color:blue;
-        background-color:palevioletred;
-        font-style: italic;
-
-
+    h1{
+        color: rgba(212, 0, 99, 0.76);
+        text-align: center;
+        font-size: 50px;
     }
-
     html{
        background-image:url('https://www.netpremacy.com/wp-content/uploads/2018/09/Background-website-01.jpg');
         background-position: center;
@@ -21,12 +16,19 @@
         background-size: cover;
         height: 800px;
     }
-    img {
+    
+    .hi {
+        display: block; 
+	margin-left: auto;
+	margin-right: auto;
+    width: 60%;
+    border-radius: 50%;
+    
+
+    }
+    .hi2 {
         float: right;
-        
-      }
-    img {
-        border-radius: 50px;
+        border-radius: 20%;
     }
 /* The alert message box */
 .alert {
@@ -39,11 +41,67 @@
      font-style: oblique;
      font-size: 15px;
      font-family: Arial, Helvetica, sans-serif;
-
+ 
 
  }
-h2{
-    display: inline;
-    display: inline-block;
-    margin-left: 0px 0px 0px 30px;
+
+ .general{
+	color: rgb(119, 58, 89);
+	text-align: center;
+	font-size: 40px;
+}
+.gif {
+    display: block; 
+	margin-left: auto;
+	margin-right: auto;
+    width: 20%;
+    border-radius: 50%;  
+}
+.g {
+    display: block; 
+	margin-left: auto;
+	margin-right: auto;
+    width: 20%;
     
+}
+.st {
+    color: rgb(93, 43, 112);
+    font-size: 25px;
+    text-align: center;
+}
+
+.job {
+    color: rgb(119, 58, 89);
+	text-align: center;
+	font-size: 40px;
+}
+.education {
+    color: rgb(119, 58, 89);
+	text-align: center;
+	font-size: 40px;
+}
+.list {
+    color: rgb(78, 99, 45);
+    font-size: 25px;
+    text-align: center;
+}
+li {
+    color: rgb(78, 99, 45);
+    font-size: 25px;
+    text-align: center;
+}
+.grad {
+    color: rgb(78, 99, 45);
+    font-size: 25px;
+    text-align: center;
+}
+.civil {
+    color: rgb(78, 99, 45);
+    font-size: 25px;
+    text-align: center;
+}
+.top {
+    color: rgb(119, 58, 89);
+	text-align: center;
+	font-size: 40px;
+}
