--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@
     color: rgb(78, 99, 45);
     font-size: 25px;
     text-align: center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 li {
     color: rgb(78, 99, 45);
