--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 
-
+@import url('https://fonts.googleapis.com/css?family=Caveat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Trade+Winds&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Courgette&display=swap');
     .li {
         background: palegoldenrod;
     }
@@ -8,6 +10,8 @@
         color: rgba(212, 0, 99, 0.76);
         text-align: center;
         font-size: 50px;
+        font-family: 'Trade Winds', cursive;
+
     }
     html{
        background-image:url('https://www.netpremacy.com/wp-content/uploads/2018/09/Background-website-01.jpg');
@@ -23,12 +27,15 @@
 	margin-right: auto;
     width: 60%;
     border-radius: 50%;
+    height:30%;
     
 
     }
     .hi2 {
         float: right;
         border-radius: 20%;
+        width: 30%;
+        height: 30%;
     }
 /* The alert message box */
 .alert {
@@ -48,7 +55,9 @@
  .general{
 	color: rgb(119, 58, 89);
 	text-align: center;
-	font-size: 40px;
+    font-size: 80px;
+    font-family:'Caveat', cursive;
+    
 }
 .gif {
     display: block; 
@@ -68,17 +77,23 @@
     color: rgb(93, 43, 112);
     font-size: 25px;
     text-align: center;
+    font-family: 'Courgette', cursive;
+
 }
 
 .job {
     color: rgb(119, 58, 89);
 	text-align: center;
-	font-size: 40px;
+    font-size: 80px;
+    font-family: 'Caveat', cursive;
+
 }
 .education {
     color: rgb(119, 58, 89);
 	text-align: center;
-	font-size: 40px;
+    font-size: 80px;
+    font-family: 'Caveat', cursive;
+
 }
 .list {
     color: rgb(78, 99, 45);
@@ -90,19 +105,35 @@ li {
     color: rgb(78, 99, 45);
     font-size: 25px;
     text-align: center;
+    font-family: 'Courgette', cursive;
+
 }
 .grad {
     color: rgb(78, 99, 45);
     font-size: 25px;
     text-align: center;
+    font-family: 'Courgette', cursive;
+
 }
 .civil {
     color: rgb(78, 99, 45);
     font-size: 25px;
     text-align: center;
+    font-family: 'Courgette', cursive;
+
 }
 .top {
     color: rgb(119, 58, 89);
 	text-align: center;
-	font-size: 40px;
+    font-size: 80px;
+    font-family: 'Caveat', cursive;
+
 }
+#alertoverlay{display: none;
+    opacity: .8;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    background:rosybrown;
+    width: 100%;}
+
